--- a/ontherole-website.css
+++ b/ontherole-website.css
@@ -84,7 +84,7 @@ font-family:Helvetica, sans-serif;
     align-self: center;
     align-content: center;
     align-items: center;
-    padding-left: 5%;
+    padding-left: 3%;
     padding-right: 10%;
 }
 
@@ -96,7 +96,7 @@ font-family:Helvetica, sans-serif;
     box-sizing: content-box;
     font-size: 40px;
     color: white;
-    font-family: 'antigoni';
+    font-family: 'Helvetica', sans-serif;
     text-align: left;
     vertical-align: top;
     align-self: center;
