--- a/ontherole-website.css
+++ b/ontherole-website.css
@@ -96,7 +96,7 @@ font-family:Helvetica, sans-serif;
     box-sizing: content-box;
     font-size: 40px;
     color: white;
-    font-family: 'Helvetica', sans-serif;
+    font-family: Helvetica, sans-serif;
     text-align: left;
     vertical-align: top;
     align-self: center;
