--- a/ontherole-website.css
+++ b/ontherole-website.css
@@ -99,7 +99,7 @@ font-family:Helvetica, sans-serif;
     font-size: 40px;
     color: white;
     font-family: Helvetica, sans-serif;
-    font-weight: 100;
+    font-weight: lighter;
     text-align: left;
     vertical-align: top;
     align-self: center;
